Fixed clipping in Safari

--- a/css/main.css
+++ b/css/main.css
@@ -308,7 +308,7 @@ button:focus {
   background-color: var(--c1);
   color: var(--c3);
   border-radius: 50%;
-  transform: translate(-50%, 50%);
+  transform: translate(-50%, 50%) translateZ(var(--social-icon-size));
 }
 
 .socialbar__label > svg {
